--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Programacón orientada a objetos en Javascript</h1>
 </body>
+<script src="Account.js"></script>
+<script src="Car.js"></script>
 <script src="index.js"></script>
 </html>
