--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -12,7 +12,7 @@
 <script src="Account.js"></script>
 <script src="Car.js"></script>
 <script src="UberX.js"></script>
-<script src="UberBan.js"></script>
+<script src="UberVan.js"></script>
 <script src="UberPool.js"></script>
 <script src="UberBlack.js"></script>
 <script src="index.js"></script>
